Added dotenv-java dependency for parsing .env files in EnvironmentPostProcessor implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<version>${org.projectlombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.2.0</version>
+		</dependency>
 
 	</dependencies>
 
@@ -96,7 +101,33 @@
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
 					</archive>
+					<includes>
+						<include>one/stayfocused/spring_boot_dotenv/**</include>
+						<include>META-INF/spring/**</include>
+						<include>META-INF/**</include>
+					</includes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.5.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<relocations>
+								<relocation>
+									<pattern>io.github.cdimascio.dotenv</pattern>
+									<shadedPattern>one.stayfocused.dotenv.libs.dotenv</shadedPattern>
+								</relocation>
+							</relocations>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
