--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<version>3.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>one.stayfocused</groupId>
-	<artifactId>spring-boot-dotenv</artifactId>
+	<groupId>one.stayfocused.spring</groupId>
+	<artifactId>dotenv-spring-boot</artifactId>
 	<version>1.0.0</version>
-	<name>spring-boot-dotenv</name>
-	<description>spring-boot-dotenv enables easy and flexible .env file loading in Spring Boot applications. Supports multiple sources: root directory, resources folder, or a custom path via DOTENV_PATH.</description>
-	<url/>
+	<name>Dotenv for Spring Boot</name>
+	<description>A simple and flexible plug-and-start library, that loads .env files into Spring Boot Environment</description>
+	<url>https://github.com/stayfocused-one/dotenv-spring-boot</url>
 	<licenses>
 		<license>
 			<name>MIT License</name>
@@ -22,13 +22,20 @@
 		</license>
 	</licenses>
 	<developers>
-		<developer/>
+		<developer>
+			<name>Augustin Gerasym</name>
+			<email>augustingerasym@gmail.com</email>
+		</developer>
 	</developers>
+	<organization>
+		<name>stayfocused.one</name>
+		<url>https://stayfocused.one</url>
+	</organization>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<url>https://github.com/stayfocused-one/dotenv-spring-boot</url>
+		<connection>scm:git:https://github.com/stayfocused-one/dotenv-spring-boot.git</connection>
+		<developerConnection>scm:git:https://github.com/stayfocused-one/dotenv-spring-boot.git</developerConnection>
+		<tag>${project.version}</tag>
 	</scm>
 	<properties>
 		<java.version>17</java.version>
@@ -53,7 +60,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<scope>provided</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -92,18 +99,82 @@
 				<version>3.4.2</version>
 				<configuration>
 					<archive>
-						<manifest>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
+						<manifestEntries>
+							<Implementation-Title>${project.artifactId}</Implementation-Title>
+							<Implementation-Version>${project.version}</Implementation-Version>
+							<Implementation-Vendor>stayfocused.one</Implementation-Vendor>
+						</manifestEntries>
 					</archive>
 					<includes>
-						<include>one/stayfocused/spring_boot_dotenv/**</include>
+						<include>one/stayfocused/spring/dotenv/**</include>
 						<include>META-INF/spring/**</include>
 						<include>META-INF/**</include>
 					</includes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.3.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.11.2</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>3.2.7</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.7.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
